@@ -2,10 +2,14 @@ package com.radiantlogic.dataconnector.test;
 
 import com.radiantlogic.custom.dataconnector.api.AuthTokenApiApi;
 import com.radiantlogic.custom.dataconnector.invoker.ApiClient;
+import java.nio.charset.StandardCharsets;
+import java.util.Base64;
+import lombok.SneakyThrows;
 import org.junit.jupiter.api.Test;
 
 public class DatasourceTest {
   @Test
+  @SneakyThrows
   void itCanCreateAndReadDatasource() {
     final ApiClient apiClient = new ApiClient();
     apiClient.setBasePath("https://rlqa-usw2-craig.dev01.radiantlogic.io");
@@ -13,13 +17,12 @@ public class DatasourceTest {
     final AuthTokenApiApi authTokenApiApi = new AuthTokenApiApi(apiClient);
     final String username = System.getenv("IDDM_USERNAME");
     final String password = System.getenv("IDDM_PASSWORD");
-    //
-    // authTokenApiApi.postLogin(Base64.getEncoder().encodeToString("%s:%s".formatted(username,
-    // password).getBytes(StandardCharsets.UTF_8))).getToken();
-    //
-    //        apiClient.setBearerToken(() -> {
-    //            System.getenv()
-    //            return authTokenApiApi.postLogin().getToken();
-    //        });
+    final String auth =
+        Base64.getEncoder()
+            .encodeToString(
+                String.format("%s:%s", username, password).getBytes(StandardCharsets.UTF_8));
+
+    final String token = authTokenApiApi.postLogin(auth).getToken();
+    apiClient.setBearerToken(token);
   }
 }
